# TugasBesar-DDP

./: .gitignore  CMakeLists.txt  README.md
db/: bioskop.csv  film.csv  kota.csv  studio copy.csv  studio.csv  users.csv
docs/: architecture.md  flow.psu
docs/specs/: auth.c.md  bioskop.c.md  db.c.md  fim.c.md  guide.md  kota.c.md  security.c.md  studio.c.md  user.c.md
include/: admin.h  all.h  auth.h  bioskop.h  client.h  db.h  display.h  film-old.h  film.h  jadwal.h  kota-old.h  kota.h  manager.h  menu.h  petugas.h  security.h  session.h  studio.h  transaksi.h  transaksidetail.h  user.h
lib/: auth.c  bioskop-old.c  bioskop.c  client.c  db.c  display.c  film-old.c  film.c  jadwal.c  kota-old.c  kota.c  manager.c  menu.c  petugas.c  security.c  studio-old.c  studio.c  transaksi.c  user.c
src/: admin.c  client.c  main.c  user.c
